[package]
name = "monitor_process_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
nix = "0.26.2"
serde = { version = "1.0.179", features = ["derive"] }
toml = "0.7.6"
